<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkOrange">

    <Button
        android:id="@+id/TMTBtnHelp"
        android:layout_width="161dp"
        android:layout_height="84dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/Trail_test"
        android:textColor="#171616"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/memoryGameButtonHelp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reactionBtnHelp"
        android:layout_width="161dp"
        android:layout_height="84dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/Reaction"
        android:textColor="#171616"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/memoryGameButtonHelp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/memoryGameButtonHelp"
        android:layout_width="161dp"
        android:layout_height="84dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/Memory"
        android:textColor="#171616"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="152dp"
        android:layout_height="80dp"
        android:layout_marginBottom="64dp"
        android:text="Help"
        android:textAlignment="center"
        android:textColor="@color/MediumVioletRed"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/memoryGameButtonHelp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64" />

</androidx.constraintlayout.widget.ConstraintLayout>