<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameSelectionBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#101010">

    <Button
        android:id="@+id/reactionHard"
        android:layout_width="115dp"
        android:layout_height="72dp"
        android:layout_marginTop="251dp"
        android:layout_marginBottom="88dp"
        android:text="@string/Trail_test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/memoryGameButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reactionEasy"
        android:layout_width="115dp"
        android:layout_height="72dp"
        android:layout_marginTop="251dp"
        android:layout_marginBottom="88dp"
        android:text="@string/Reaction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/memoryGameButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/memoryGameButton"
        android:layout_width="115dp"
        android:layout_height="72dp"
        android:layout_marginTop="251dp"
        android:layout_marginBottom="88dp"
        android:text="@string/Memory"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/reactionHard"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/reactionEasy"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161"
        app:srcCompat="@drawable/banner_logo" />

    <TextView
        android:id="@+id/Header"
        android:layout_width="421dp"
        android:layout_height="52dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="280dp"
        android:layout_marginBottom="50dp"
        android:text="Please pick a game below!"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

</androidx.constraintlayout.widget.ConstraintLayout>