<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reaction_game_bckgrd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#101010">

    <EditText
        android:id="@+id/startPromptMsgTxt"
        android:layout_width="296dp"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Start_prompt"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playButton" />

    <ImageView
        android:id="@+id/playButton"
        android:layout_width="51dp"
        android:layout_height="70dp"
        android:layout_marginTop="225dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/startPromptMsgTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/display_msg"
        android:layout_width="286dp"
        android:layout_height="73dp"
        android:layout_marginStart="217dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="228dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="@+id/playButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/waitForGreen"
        android:layout_width="196dp"
        android:layout_height="55dp"
        android:layout_marginStart="251dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="284dp"
        android:layout_marginBottom="20dp"
        android:text="Wait for green ..."
        app:layout_constraintBottom_toTopOf="@+id/playButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_msg" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="28dp"
        android:text="@string/Exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/retry_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/startPromptMsgTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428" />

    <Button
        android:id="@+id/retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="28dp"
        android:text="@string/Retry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/exit_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342" />
</androidx.constraintlayout.widget.ConstraintLayout>